fix header padding to avoid horizontal scrollbar

--- a/css/business.css
+++ b/css/business.css
@@ -36,7 +36,7 @@ footer {
     background: #353536;
     font-size: 13px;
     color: #fff;
-    padding: 15px 0;
+    padding-top: 15px;
 }
 
 .top5 { margin-top:5px; }
